src/codegen/tests/snapshots/rusty__codegen__tests__codegen_error_messages_tests__pointer_binary_expression_multiplication.snap
---
source: src/codegen/tests/codegen_error_messages_tests.rs
expression: msg
---
error[E071]: Operator '*' unimplemented for pointers
  ┌─ <internal>:8:16
  │
8 │         ptr := ptr * ptr;
  │                ^^^^^^^^^ Operator '*' unimplemented for pointers
